--- a/gestionEmpleados/src/main/resources/application.properties
+++ b/gestionEmpleados/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=gestionEmpleados
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/gestion_empleados_intermedio
+spring.datasource.username=root
+spring.datasource.password=brako15220
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
